<resources>
    <string name="app_name">GoFood</string>
    <string name="hello_blank_fragment">"Hello "</string>

    <!--    onBoarding Screens-->
    <string name="enjoy_description">You will have a lot of\nfun while cooking with\n<big><b><font fgcolor="#fe8417">GoFood</font></b></big> app.</string>
    <string name="cook_description">With the video guide, you will be\nable to learn the details of the\nrecipes better.</string>
    <string name="discover_description">Each time you press the discover\nbutton, different recipes will\nappear on your screen.</string>
    <string name="discover">Discover</string>
    <string name="cook">Cook</string>
    <string name="enjoy">Enjoy</string>
    <string name="next_btn">Next</string>
    <string name="finish">Finish</string>


    <!--    login screen-->
    <string name="dont_have_account">Don\'t have an account? <font fgcolor="#fe8417"><b>Sign up</b></font></string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_to_gofood">Welcome to <big><b><font fgcolor="#fe8417">GoFood</font></b></big>\nAll the fun is inside, <b>login now!</b></string>
    <string name="all_the_fun_is_inside_login_now">All the fun is inside, <b>login now!</b></string>
    <string name="already_have_an_account_sign_in">Already have an account? <font fgcolor="#fe8417"><b>Sign in</b></font></string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agree_to_gofood_terms">I agree to <font fgcolor="#fe8417">GoFood Terms</font></string>
    <string name="fill_the_form">Fill the form and get unlimited\nrecipe and tips.</string>
    <string name="login">Login</string>

    <string name="hide_password">hide Password</string>
    <string name="show_password">show password</string>
    <!--    fav screen-->
    <string name="empty_fav">You have no favorites…yet.</string>
    <string name="registration_successful">Registration successful</string>
    <string name="guest_login">GUEST LOGIN</string>
    <string name="hi_there">Hi there!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me_checkbox">Remember me</string>
    <string name="sign_up_today">Sign up today!</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>

    <!--    home screen-->
    <string name="home_title">What are you\nCoOking today?</string>
    <string name="popular_today">Popular Today</string>
    <string name="title">Title</string>
    <string name="gofood">Gofood</string>
</resources>

