<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:layout_margin="40dp"
    android:layout_marginBottom="32dp"
    android:theme="@style/color_auth"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.authentication.login.LoginFragment">




    <Button
        android:id="@+id/guest_login_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:padding="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/guest_login"
        android:textColor="@color/primary_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:letterSpacing=".02"
            android:paddingVertical="@dimen/margin_medium"
            android:text="@string/hi_there"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"

            android:lineSpacingExtra="5sp"
            android:text="@string/welcome_to_gofood"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_signin_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textColorHint="#9C9C9C"

            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeWidth="0dp"

            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/email_24"
            app:endIconMode="custom"
            app:endIconTint="@color/primary_color"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_signin_field"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ellipsize="end"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_signin_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="#9C9C9C"
            android:layout_marginTop="@dimen/margin_small"

            app:boxStrokeWidth="0dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxBackgroundColor="@color/white"

            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/primary_color"

            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/lock_24"
            app:endIconMode="custom"
            app:endIconTint="@color/primary_color"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_signin_field"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:maxLength="20"
                android:ellipsize="end"
                tools:ignore="KeyboardInaccessibleWidget" />

        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember_checkbox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/remember_me_checkbox"
                android:textColor="#807474"
                android:theme="@style/color_auth" />

            <Button
                android:id="@+id/show_pass"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:layout_gravity="end"
                android:layout_margin="0dp"
                android:gravity="end"
                android:padding="0dp"
                android:text="@string/show_password"
                android:textColor="@color/primary_color" />



        </LinearLayout>

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:backgroundTint="@color/primary_color"
            android:paddingVertical="14dp"
            android:text="@string/sign_in"
            android:textSize="20sp"
            app:cornerRadius="12dp" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="?android:attr/listDivider" />
        <TextView
            android:id="@+id/signup_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/dont_have_account"
            android:layout_marginTop="@dimen/margin_medium"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>