<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:layout_margin="40dp"
    android:layout_marginBottom="32dp"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/color_auth"
    tools:context=".presentation.authentication.register.RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollIndicators="right"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:letterSpacing=".02"
                android:paddingVertical="@dimen/margin_medium"
                android:text="Sign up today!"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="16dp"
                android:text="@string/fill_the_form"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:textColorHint="#9C9C9C"

                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth="0dp"

                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/person_24"
                app:endIconMode="custom"
                app:endIconTint="@color/splash_bg"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    tools:ignore="KeyboardInaccessibleWidget" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="Last Name"
                android:textColorHint="#9C9C9C"

                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth="0dp"

                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/person_24"
                app:endIconMode="custom"
                app:endIconTint="@color/splash_bg"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    tools:ignore="KeyboardInaccessibleWidget" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="Email"
                android:textColorHint="#9C9C9C"

                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth="0dp"

                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/email_24"
                app:endIconMode="custom"
                app:endIconTint="@color/splash_bg"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_signup_field"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    tools:ignore="KeyboardInaccessibleWidget" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="Password"
                android:textColorHint="#9C9C9C"

                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth="0dp"

                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/lock_24"
                app:endIconMode="custom"
                app:endIconTint="@color/splash_bg"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_signup_field"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    tools:ignore="KeyboardInaccessibleWidget" />

            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/terms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/margin_medium"
                android:minHeight="0dp"
                android:text="@string/i_agree_to_gofood_terms"
                android:textColor="#807474"
                android:theme="@style/color_auth" />


            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:backgroundTint="@color/splash_bg"
                android:paddingVertical="14dp"
                android:text="@string/sign_up"
                android:textSize="20sp"
                app:cornerRadius="12dp" />


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/login_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="16dp"
                android:text="@string/already_have_an_account_sign_in" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>